--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.cellzer.yuezhihu.yuezhihu" >
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.write_external_storage"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.write_external_storage" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".YueZhihuApplication"
@@ -12,9 +13,7 @@
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ui.activity.MainActivity"
-             >
+        <activity android:name=".ui.activity.MainActivity" >
         </activity>
         <activity
             android:name=".ui.activity.LatestContentActivity"
@@ -24,14 +23,16 @@
             android:name=".ui.activity.NewsContentActivity"
             android:theme="@style/AppTheme.TransparentActivity" >
         </activity>
-        <activity
-            android:name=".ui.activity.SplashActivity"
-             >
+        <activity android:name=".ui.activity.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.ChosenContentActivity"
+            android:label="@string/title_activity_chosen_content" >
         </activity>
     </application>
 
