--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.github.cellzer.yuezhihu.yuezhihu" >
+<manifest package="io.github.cellzer.yuezhihu.yuezhihu"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:versionCode="2"
+          android:versionName="1.0.1"
+    >
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.write_external_storage" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.write_external_storage"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".YueZhihuApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".ui.activity.MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.MainActivity">
         </activity>
         <activity
             android:name=".ui.activity.LatestContentActivity"
-            android:theme="@style/AppTheme.TransparentActivity" >
+            android:theme="@style/AppTheme.TransparentActivity">
         </activity>
         <activity
             android:name=".ui.activity.NewsContentActivity"
-            android:theme="@style/AppTheme.TransparentActivity" >
+            android:theme="@style/AppTheme.TransparentActivity">
         </activity>
-        <activity android:name=".ui.activity.SplashActivity" >
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.ChosenContentActivity"
-            android:label="@string/title_activity_chosen_content" >
+            android:label="@string/title_activity_chosen_content">
         </activity>
         <activity
             android:name=".ui.activity.TopUserContentActivity"
-            android:label="@string/title_activity_top_user_content" >
+            android:label="@string/title_activity_top_user_content">
         </activity>
     </application>
 
